[package]
name = "nh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.30"
egui_extras = "0.30"
egui_dock = "0.15"
rfd = "0.15"
uuid = { version = "1.12", features = [ "std", "v7" ] }

# RDF
sophia = { version = "0.9", features = [ "jsonld", "xml" ] }
sophia_sparql = "0.9"
