
[package]
name = "nh"
version = "0.1.0"
edition = "2024"

[dependencies]
nh-derive = { path = "../nh-derive" }

derive_more = { version = "2.0", features = [ "from", "try_into", "not" ] }
eframe = "0.32"
egui_extras = { version = "0.32", features = [ "serde" ] }
egui_dock = "0.17"
egui_ltreeview = "0.5"
rfd = "0.15"
serde = { version = "1.0", features = [ "derive", "rc" ] }
toml = "0.9"
uuid = { version = "1.18", features = [ "std", "v7", "serde" ] }
zip = "5.1"

# Fluent
fluent-bundle = "0.16"
unic-langid = { version = "0.9", features = [ "macros" ] }
unic-langid-macros = "0.9"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# RDF
sophia = { version = "0.9", features = [ "jsonld", "xml" ] }
sophia_sparql = "0.9"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.18", features = [ "std", "v7", "serde", "js" ] }

wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
