
[package]
name = "nh"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.23"

[dependencies]
nh-derive = { path = "../nh-derive" }
lalrpop = "0.23"
lalrpop-util = "0.23"

derive_more = { version = "2.1", features = [ "from", "try_into", "not" ] }
eframe = "0.34"
egui_extras = { version = "0.34", features = [ "serde" ] }
egui_dock = "0.19"
egui_ltreeview = "0.7"
rfd = "0.17"
serde = { version = "1.0", features = [ "derive", "rc" ] }
toml = "1.1"
uuid = { version = "1.23", features = [ "std", "v7", "serde" ] }
zip = { version = "8.5", default-features = false }

# Fluent
fluent-bundle = "0.16"
unic-langid = { version = "0.9", features = [ "macros" ] }
unic-langid-macros = "0.9"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
# RDF
sophia = { version = "0.9", features = [ "jsonld", "xml" ] }
sophia_sparql = "0.9"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.23", features = [ "std", "v7", "serde", "js" ] }

wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
